--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,7 @@ url = "https://pypi.tuna.tsinghua.edu.cn/simple"
 verify_ssl = true
 
 [dev-packages]
+autopep8 = "*"
 
 [packages]
 asn1crypto = "==0.24.0"
